packages/website-2/src/styles/content.css
/* src/styles/content.css */
@tailwind base;
@tailwind components;
@tailwind utilities;

.content {
  @apply prose md:prose-base max-w-full text-primary;

  @apply prose-h1:font-medium prose-h1:font-machina prose-h1:break-words;
  @apply prose-h2:py-2 prose-h2:border-b prose-h2:border-primary prose-h2:break-words;
  @apply prose-h3:break-words;
  @apply prose-h4:break-words;
  @apply prose-h5:break-words;
  @apply prose-h6:break-words;

  @apply prose-td:border prose-th:border prose-td:border-secondary prose-th:border-secondary;
  @apply prose-td:py-lg prose-td:px-3xl prose-th:py-lg prose-th:px-3xl prose-th:bg-secondary;
  @apply prose-a:text-brand-secondary prose-a:underline;
  @apply prose-code:font-montreal prose-code:font-medium prose-code:text-primary prose-code:bg-brand-secondary;

  code {
    &:not(pre > code)::before {
      content: '‘'; /* Add backtick before the code content */
    }

    &:not(pre > code)::after {
      content: '‘'; /* Add backtick after the code content */
    }
  }

  #footnote-label {
    position: relative;
    width: unset;
    height: unset;
  }

  section.footnotes {
    @apply bg-brand-primary;
    @apply mx-[-16px] md:mx-[-32px] px-[16px] md:px-[32px] py-[16px];

    h2 {
      @apply m-0;
    }
  }

  sup {
    @apply top-0;

    a {
      @apply text-sm text-brand-secondary font-medium border py-xxs px-sm bg-utility-brand-50 border-utility-brand-200 rounded-sm;
    }
  }

  .katex-html {
    display: none;
  }

  .icon.icon-link {
    display: inline-block; /* Ensures the element behaves like an inline icon */
    width: 1rem; /* Set width for the icon */
    height: 1rem; /* Set height for the icon */
    background-color: transparent; /* Ensure the background is transparent */
    background-image: url('/link.svg'); /* Replace with your desired icon */
    background-repeat: no-repeat;
    background-size: contain; /* Ensures the image scales properly */
    vertical-align: middle; /* Aligns with text, if any */
    cursor: pointer; /* Changes cursor to pointer for interactivity */
    margin-left: 6px;
  }

  a:hover .icon.icon-link {
    filter: brightness(1.2); /* Lightens the icon on hover */
  }

  h1,
  h2,
  h3,
  span {
    @apply text-primary;
  }

  img {
    @apply bg-[transparent] p-4 dark:bg-[#e9e8eb];
  }

  strong {
    @apply dark:text-primary;
  }

  /*h1[id]::before {
    content: '';
    display: block;
    height: 80px;
    margin-top: -80px;
  }*/

  h1[id],
  h2[id],
  h3[id],
  h4[id],
  h5[id],
  h6[id] {
    scroll-margin-top: 90px;
  }
}

